steffan solved the button behind the video

--- a/Bühler/dev.stahlbau/dev.stahl.style.scss
+++ b/Bühler/dev.stahlbau/dev.stahl.style.scss
@@ -4380,7 +4380,7 @@ footer {
 		}
 
         .wp-block-separator.blue.last {
-			margin: 1em 0 3em;
+			margin: 3em 0 3em;
 		}
 		
 		.wp-block-spacer {
